2001-02-07  Christoph Reichenbach  <jameson@linuxgames.com>
	* files/utils.h: #ifndef'd inclusion of iosfwd
	* shapes/items.h: #ifndef'd inclusion of iosfwd
	* actorio.cc: Fixed "subscript out of range" problem
	* configure.in: Added check for DEC CXX on Alpha/Linux

2001-02-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be, exult_types.h, actors.cc: building on BeOS again

2001-02-07  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc, files/utils.*: Removed the Win32 fix and replaced it
	  with text file reading modes.
	  
2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* FAQ: added Dominik's FAQ to the distribution
	* */Makefile.am, configure.in: get "make dist" to work

2001-02-07  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc: Fix end of line bug on Win32

2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* tools/expack.cc: allow -i to create flex archives from files not
	  in the current directory

2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* tools/expack.cc: fix -c behaviour
	* Makefile.cygwin, Makefile.win32: use new -i switch for expack

	Fixed once and for all "alpha_kludges.h" ugliness:

	* autoconfig.h: renamed to config.h to be consistent with autoconf
	  guidelines
	* acconfig.h: use @BOTTOM@ directive to conditionally include
	  alpha_kludges.h if necessary
	* */*: removed all instances of #include "alpha_kludges.h" and
	  added the standard #ifdef HAVE_CONFIG_H bit to all .cc files

2001-02-06  Jeff Freedman  <jeff@amy.nerble.net>
	* actors.cc: Weapon animations are set during combat (so Great
	Dagger is rendered correctly now).

2001-02-06  Christoph Reichenbach  <jameson@linuxgames.com>
	* vast amount of files: "Fixed" alpha_kludges.h includes. I'll get
	nightmares from the sheer ugliness I introduced again.
	* actorio.cc: Fixed typo (?) in line 296: Game::Game::get_avname()
	* exult.cc (Init): Added a "friendly" error message if loading the
	keybinder defaults failed
