@@ -22,4 +22,4 @@ extras.shp
 midi_conversion.shp
 sfx_conversion.shp
 palette_fades.shp
-default.key
+defaultkeys.txt
